<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    style="@style/Base.Widget.AppCompat.ImageButton"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:src="@drawable/ic_account_balance_wallet_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/total_saldo" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/pemasukan_dashboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pemasukan_dashboard"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/saldo_pemasukan_dash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    tools:text="Rp.3.000.000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pemasukan_dashboard"
                    android:text="@string/pengeluaran_dashboard"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/saldo_pengeluaran_dash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/saldo_pemasukan_dash"
                    android:layout_alignParentEnd="true"
                    tools:text="Rp.2.500.000" />

                <View
                    android:id="@+id/view_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/saldo_pengeluaran_dash"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/saldo_kumulatif_dash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/view_divider"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:textStyle="bold"
                    tools:text="Rp.500.000" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/history_title"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView3"
        app:layout_constraintStart_toStartOf="@+id/cardView3"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    style="@style/Base.Widget.AppCompat.ImageButton"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:src="@drawable/ic_history_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/history_dashboard" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/history_title">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_history"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/item_row_history" />




        </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
